2010-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* base.py, rss.py, rss-16.png: Added RSS icon.

2010-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*.py: Introduced xdg.IconTheme.getIconPath.  Support for
	  downloading favicons.

2010-01-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage.py, photoliststore.py: Added GConf
	  options (aspect_max, aspect_min: aspect = width / height) to
	  disable display of very tall or wide images. (issue #22) 
	* config.py: Added set_float & get_float.
	* menu.py, base.py, flickr.py, fspot.py, picasa.py: Added basic
	  support for source icons.

2010-01-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, photoimage.py: Fixed a frame position bug (issue #31).
	* COPYING, gphotoframe.glade: Updated copyright years.
	* picasa.py: Removed gdata-python-client dependency.
	* setup.cfg: Enabled gnome-screensaver support (issue #21).

2009-08-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* constants.py: Fixed the glade file directory.

2009-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4.1 release.

2009-08-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for F-Spot 0.6.0 database (issue #28).

2009-08-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* README, COPYING, GPL: Updated the copyright notice (issue #27).

2009-07-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Fixed a tag related bug (issue #25).
	  Fixed a sql statement bug (issue #26).

2009-07-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 0.4 release.
	* gnomescreensaver.py (GsThemeWindow): Code refactoring.
	* photoimage.py: Fixed a bug.

2009-07-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoimage.py, menu.py, photoframe.py: Divided photoframe.py.

2009-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, gnomescreensaver.py, etc: Added support for
	  gnome-screensaver (issue #21).
	* extras/build_i18n.py: Added distutils.extras hacks.